# flask-scratch

./: pyproject.toml  pyzed-3.2-cp37-cp37m-linux_x86_64.whl  requirements.txt
flask_scratch/: server.py
tests/: test_flask_scratch.py
